@@ -3,6 +3,8 @@ SUMMARY OF NEW FEATURES AND BUG FIXES SINCE V4.0
 ============================================================================
 
 Version 6.1.5 - not yet released
+* Android
+  - fix timer crash
 
 Version 6.1.4 - 2011/07/30
 * memory leaks fixed
